# sanodiscord

./: LICENSE  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
