[package]
name = "sano-discord"
version = "1.0.0"
description = "Discord, wrapped in Tauri."
authors = [ "birajrai" ]
license = "MIT"
repository = "https://github.com/birajrai/sano-discord"
default-run = "sano-discord"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.2", features = ["notification-all", "system-tray"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
window-shadows = "0.2.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
